k8s/manifests/keycloak/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-deployment
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.5.2
          args: [ "start" ]
          ports:
            - name: http
              containerPort: 8080
            - name: health
              containerPort: 9000
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "700Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 9000
          livenessProbe:
            httpGet:
              path: /health/live
              port: 9000
          startupProbe:
            httpGet:
              path: /health/started
              port: 9000
            initialDelaySeconds: 120
            periodSeconds: 10
            failureThreshold: 12
